@@ -1,6 +1,7 @@
 1.12.0 / 
 [Alexandr Topilski]
 - XREVRANGE command UI handling 
+- Support streams type
 
 1.11.0 / November 26, 2017
 [Alexandr Topilski]
